remove custom color diaglog