@@ -41,6 +41,21 @@
       <version>${javafx.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-swing</artifactId>
+      <version>${javafx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-web</artifactId>
+      <version>${javafx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>${javafx.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.github.RealThanhpv</groupId>
       <artifactId>JFxSvgLoader</artifactId>
       <version>master-SNAPSHOT</version>
@@ -54,6 +69,11 @@
       <groupId>org.kordamp.ikonli</groupId>
       <artifactId>ikonli-javafx</artifactId>
       <version>12.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>net.raumzeitfalle.fx</groupId>
+      <artifactId>scenic-view</artifactId>
+      <version>11.0.2</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -94,11 +114,54 @@
             <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control.skin.resources=tpv.fxcontrol</arg>
 
           </compilerArgs>
+          <options>
+            <option>--add-exports</option>
+            <option>javafx.graphics/com.sun.javafx.util=tpv.fxcontrol</option>
+            <option>--add-exports</option>
+            <option>javafx.graphics/com.sun.javafx.scene=tpv.fxcontrol</option>
+            <option>--add-exports</option>
+            <option>javafx.graphics/com.sun.javafx.scene.traversal=tpv.fxcontrol</option>
+            <option>--add-exports</option>
+            <option>javafx.controls/com.sun.javafx.scene.control=tpv.fxcontrol</option>
+            <option>--add-exports</option>
+            <option>javafx.controls/com.sun.javafx.scene.control.behavior=tpv.fxcontrol</option>
+            <option>--add-exports</option>
+            <option>javafx.controls/com.sun.javafx.scene.control.inputmap=tpv.fxcontrol</option>
+            <option>--add-exports</option>
+            <option>javafx.controls/com.sun.javafx.scene.control.skin=tpv.fxcontrol</option>
+
+          </options>
         </configuration>
 
       </plugin>
 
+<!--      <plugin>-->
+<!--        <groupId>org.openjfx</groupId>-->
+<!--        <artifactId>javafx-maven-plugin</artifactId>-->
+<!--        <version>0.0.8</version>-->
+<!--        <configuration>-->
+<!--          <mainClass>tpv.fxcontrol/tpv.fxcontrol.Main</mainClass>-->
 
+<!--            <options>-->
+<!--              <option>&#45;&#45;add-exports</option>-->
+<!--              <option>javafx.graphics/com.sun.javafx.util=tpv.fxcontrol</option>-->
+<!--              <option>&#45;&#45;add-exports</option>-->
+<!--              <option>javafx.graphics/com.sun.javafx.scene=tpv.fxcontrol</option>-->
+<!--              <option>&#45;&#45;add-exports</option>-->
+<!--              <option>javafx.graphics/com.sun.javafx.scene.traversal=tpv.fxcontrol</option>-->
+<!--              <option>&#45;&#45;add-exports</option>-->
+<!--              <option>javafx.controls/com.sun.javafx.scene.control=tpv.fxcontrol</option>-->
+<!--              <option>&#45;&#45;add-exports</option>-->
+<!--              <option>javafx.controls/com.sun.javafx.scene.control.behavior=tpv.fxcontrol</option>-->
+<!--              <option>&#45;&#45;add-exports</option>-->
+<!--              <option>javafx.controls/com.sun.javafx.scene.control.inputmap=tpv.fxcontrol</option>-->
+<!--              <option>&#45;&#45;add-exports</option>-->
+<!--              <option>javafx.controls/com.sun.javafx.scene.control.skin=tpv.fxcontrol</option>-->
+
+<!--            </options>-->
+
+<!--        </configuration>-->
+<!--      </plugin>-->
     </plugins>
   </build>
 
